--- a/Assignments/Assignment18.html
+++ b/Assignments/Assignment18.html
@@ -211,7 +211,7 @@
 <script>
     // url="/AssignmentsTraining-main/Assignments/Assignment16.html";
     setTimeout(()=>{
-        window.open("./Assignment17.html","About",'height=900,width=800');
+        window.open("./Assignment17.html","_top",'height=900,width=800');
     },7000);
 </script>  
 
