--- a/index.html
+++ b/index.html
@@ -209,50 +209,50 @@
 
         </tr>
         <tr>
-            <td>11 Write a logic to create a game called Guess the Number. </td>
+            <td>10-2 Write a logic to create a game called Guess the Number. </td>
             <td><a href="./Assignments/Assignment10task2.html">Guess Number</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>12  Write code to create an Object containing information .</td>
+            <td>10-3 Write code to create an Object containing information .</td>
             <td><a href="./Assignments/Assignment10task3.html">Information</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>13.Kindly work on the following JavaScript Task:
+            <td>11.Kindly work on the following JavaScript Task:
             </td>
             <td><a href="./Assignments/Assingnemt11.html">Javascript Concepts</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>14.Perform programs with functions in JavaScript  </td>
+            <td>12.Perform programs with functions in JavaScript  </td>
             <td><a href="./Assignments/Assignment12.html">Javascript Functions</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>15.Write Programs of following questions </td>
+            <td>13.Write Programs of following questions </td>
             <td><a href="./Assignments/Assignment13.html">Programs Javascript</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>15.Task3 program</td>
+            <td>13-3.Task3 program</td>
             <td><a href="./Assignments/Assignment13Task3.html">Task3</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>16.WHAKE A MOLE GAME</td>
+            <td>14.WHAKE A MOLE GAME</td>
             <td><a href="./Assignments/Assignment14.html">Game</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>16.TO DO LIST</td>
+            <td>15.TO DO LIST</td>
             <td><a href="./Assignments/Assignment15.html">List</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
@@ -276,8 +276,14 @@
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
         <tr>
-            <td>18.Show Notification when user not connected to Internet.                </td>
+            <td>19.Covid Cases by Fetching data using API                </td>
             <td><a href="./Assignments/Assignment20.html">Connectivity Status</a></td>
+            <td>Unchecked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
+        <tr>
+            <td>20.Canvas Game                </td>
+            <td><a href="./Assignments/Assignment21.html">Canvas Game</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
