--- a/Assignments/CanvasGame.html
+++ b/Assignments/CanvasGame.html
@@ -13,6 +13,7 @@
     <canvas id="canvas" width="800" height="600"></canvas>
     <img src="../Assignments/images/Fbeetleimage.png" alt="" id="beetle">
     <img src="../Assignments/images/coinimage1.png" alt="" id="coin">
+    <img src="../Assignments/images/fimagewalk.png" alt="" id="walk">
 
     <!-- <img src="../Assignments/images/canvasimage1.webp" alt=""> -->
     <script src="./CanvasScript.js"></script>
