--- a/Assignments/Assignment21.html
+++ b/Assignments/Assignment21.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Canvas Game</h1>
     <canvas id="canvas" width="500" height="500"> </canvas>
-    <img src="https://i.ibb.co/HHBFJdH/char.png" alt="" id="source" />
+    <img src="../Assignments/images/minire.png" alt="" id="source"/>
     <script src="script21.js"></script>
   </body>
 </html>
