--- a/index.html
+++ b/index.html
@@ -287,7 +287,12 @@
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
-        
+        <tr>
+            <td>21 Mario Game                </td>
+            <td><a href="./Assignments/Day-17 Mario_Game/firstPage.html">Canvas Game</a></td>
+            <td>Unchecked</td>
+            <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
+        </tr>
     </table>
 </body>
 
