--- a/Assignments/Assignment2.html
+++ b/Assignments/Assignment2.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css
+
+
+
+    ">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Sacramento&family=Yellowtail&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Sacramento&family=Satisfy&family=Yellowtail&display=swap" rel="stylesheet">
     <title>Assignment2</title>
     <style>
         body{
@@ -18,14 +32,21 @@
         }
         .header h1{
             text-align: center;
+            font-family: 'Dancing Script', cursive;
+            font-size: 35px;
+
         }
         .header p{
-            text-align: center
+            text-align: center;
             /* line-height:0vh; */
+            font-family: 'Sacramento', cursive;
+            font-size: 24px;
+
 
         }
         .header{
             background-color: rgb(204, 200, 200);
+            /* background-image: linear-gradient(orange,white,green); */
             padding: 20px;
             width:100%;      
             margin-left: -2px   
@@ -33,6 +54,7 @@
         }
         .image p{
             text-align: center;
+            font-size: 24px;
         }
         .image img{
             height: 90vh;
@@ -49,12 +71,26 @@
         }
         .paragraphs p{
             color:black;
+            font-family: 'Yellowtail', cursive;
+
         }
         .paragraphs .p1 p
         {
             padding: 20px;
         }
-        
+        ul li {
+            font-family: 'Yellowtail', cursive;
+            /* font-size: 24px; */
+
+        }
+        .p2 p a{
+            text-decoration: none;
+            color: deeppink;
+
+        }
+        .pw p a:hover{
+            color:green;
+        }
     </style>
 </head>
 <body>
@@ -63,8 +99,9 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, assumenda.</p>
     </div>
     <div><p><div class="image">
-        <img src="./images/girlimage.jpg" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, eaque reprehenderit sequi optio eligendi maiores provident expedita. Velit, asperiores quia?</p>
+        <img src="https://media.istockphoto.com/photos/female-army-solider-saluting-against-sunset-sky-picture-id1300072335?b=1&k=20&m=1300072335&s=170667a&w=0&h=HlilgHaJ1QxX507ncfFyqSyqDZwVf_hvwSbeeiyNJAQ=" alt="">
+        <p style="    font-family: 'Yellowtail', cursive;
+        ;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, eaque reprehenderit sequi optio eligendi maiores provident expedita. Velit, asperiores quia?</p>
     </div></p></div>
     
     <div class="paragraphs">
