--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         </tr>
         <tr>
             <td>19.Covid Cases by Fetching data using API                </td>
-            <td><a href="./Assignments/Assignment20.html">Connectivity Status</a></td>
+            <td><a href="./Assignments/Assignment20.html">Covid Cases</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
