--- a/Assignments/Assignment14.html
+++ b/Assignments/Assignment14.html
@@ -9,12 +9,18 @@
   </head>
   <body>
     <h1>WHAKE A MOLE</h1>
+    <h2 id="timer">60</h2>
+    <!-- <span class="timer" id="watch">Timer:</span> -->
     <img src="../Assignments/images/mole.png" id="mole" />
     <img src="../Assignments/images/dirt.svg" id="mud" />
+
     <!-- <img src="../Assignments/images/whackamoleimage.webp" alt="" style="width: 100%;height:100vh"> -->
     <!-- <img src="../Assignments/images/withoutwhack.png" alt="" style="width:100%;height: 100vh;margin-top: -120px;" id="front"> -->
     <button type="button" id="start" onclick="start()">START</button>
-
+    <audio id="myAudio">
+      <source src="./images/moletouch.wav" type="audio/mp3" id="audio1"/>
+      <source src="./images/startgame.wav" type="audio/mp3" id="audio2"/>
+    </audio>
     <img src="../Assignments/images/dirt.svg" id="dirt1" class="dirt" />
     <img src="../Assignments/images/dirt.svg" id="dirt2" class="dirt" />
     <img src="../Assignments/images/dirt.svg" id="dirt3" class="dirt" />
