--- a/Assignments/Assignment14.html
+++ b/Assignments/Assignment14.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -29,6 +29,60 @@
     <img src="../Assignments/images/dirt.svg" id="dirt6" class="dirt" />
 
     <img src="../Assignments/images/mole.png" id="mole1" class="mole" onclick="incrementPoints()" />
+    <img src="../Assignments/images/mole.png" id="mole2" class="mole" />
+    <img src="../Assignments/images/mole.png" id="mole3" class="mole" />
+    <img src="../Assignments/images/mole.png" id="mole4" class="mole" />
+    <img src="../Assignments/images/mole.png" id="mole5" class="mole" />
+    <img src="../Assignments/images/mole.png" id="mole6" class="mole" />
+
+    <span class="points" id="point1">YOUR POINT :-</span>
+    <span id="currentPoint" class="points">0</span>
+
+    <script src="script.js"></script>
+  </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WHAKE A MOLE GAME</title>
+    <link rel="stylesheet" href="./style14.css" />
+  </head>
+  <body>
+    <h1>WHAKE A MOLE</h1>
+    <div>
+      <h2><span class="timer1" id="timer2">Timer :-</span>
+      <span class="timer3" id="timer4">60</span></h1>
+      
+    </div>
+    <!-- <h2 id="head2">Timer:- 60</h2> -->
+    <h2 id="final">Your points</h2>
+
+    <!-- <audio id="myAudio">
+      <source src="./images/moletouch.wav" type="audio/mp3" id="audio1"/>
+      <source src="./images/startgame.wav" type="audio/mp3" id="audio2"/>
+    </audio> -->
+    <img src="../Assignments/images/mole.png" id="mole" />
+    <img src="../Assignments/images/dirt.svg" id="mud" />
+    <button type="button" id="start" onclick="start()">START</button>
+    <!-- <img src="https://media.istockphoto.com/photos/involved-asian-man-cyber-sport-gamer-concentrated-playing-video-games-picture-id1249503281?k=20&m=1249503281&s=612x612&w=0&h=dFb5aaUE4uJe5joJRBxqiqUpqmlzr_oGCuOF1lyPQ4c=" alt="" id="loss"> -->
+
+    <img src="../Assignments/images/dirt.svg" id="dirt1" class="dirt" />
+    <img src="../Assignments/images/dirt.svg" id="dirt2" class="dirt" />
+    <img src="../Assignments/images/dirt.svg" id="dirt3" class="dirt" />
+    <img src="../Assignments/images/dirt.svg" id="dirt4" class="dirt" />
+    <img src="../Assignments/images/dirt.svg" id="dirt5" class="dirt" />
+    <img src="../Assignments/images/dirt.svg" id="dirt6" class="dirt" />
+
+    <img
+      src="../Assignments/images/mole.png"
+      id="mole1"
+      class="mole"
+      onclick="incrementPoints()"
+    />
     <img src="../Assignments/images/mole.png" id="mole2" class="mole" />
     <img src="../Assignments/images/mole.png" id="mole3" class="mole" />
     <img src="../Assignments/images/mole.png" id="mole4" class="mole" />
