--- a/Assignments/Assignment14.html
+++ b/Assignments/Assignment14.html
@@ -40,8 +40,8 @@
 
 <!--     <script src="script.js"></script>
   </body> -->
-</html> -->
-
+<!-- </html> -->
+ -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
