--- a/Assignments/Assignment14.html
+++ b/Assignments/Assignment14.html
@@ -1,47 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WHAKE A MOLE GAME</title>
-    <link rel="stylesheet" href="../Assignments/styles14.css">
-  </head>
-  <body>
-    <h1>WHAKE A MOLE</h1>
-    <h2 id="timer">60</h2>
-    <!-- <span class="timer" id="watch">Timer:</span> -->
-<!--     <img src="../Assignments/images/mole.png" id="mole" />
-    <img src="../Assignments/images/dirt.svg" id="mud" />
- -->
-    <!-- <img src="../Assignments/images/whackamoleimage.webp" alt="" style="width: 100%;height:100vh"> -->
-    <!-- <img src="../Assignments/images/withoutwhack.png" alt="" style="width:100%;height: 100vh;margin-top: -120px;" id="front"> -->
-<!--     <button type="button" id="start" onclick="start()">START</button>
-    <audio id="myAudio">
-      <source src="./images/moletouch.wav" type="audio/mp3" id="audio1"/>
-      <source src="./images/startgame.wav" type="audio/mp3" id="audio2"/>
-    </audio> -->
-<!--     <img src="../Assignments/images/dirt.svg" id="dirt1" class="dirt" />
-    <img src="../Assignments/images/dirt.svg" id="dirt2" class="dirt" />
-    <img src="../Assignments/images/dirt.svg" id="dirt3" class="dirt" />
-    <img src="../Assignments/images/dirt.svg" id="dirt4" class="dirt" />
-    <img src="../Assignments/images/dirt.svg" id="dirt5" class="dirt" />
-    <img src="../Assignments/images/dirt.svg" id="dirt6" class="dirt" />
-
-    <img src="../Assignments/images/mole.png" id="mole1" class="mole" onclick="incrementPoints()" />
-    <img src="../Assignments/images/mole.png" id="mole2" class="mole" />
-    <img src="../Assignments/images/mole.png" id="mole3" class="mole" />
-    <img src="../Assignments/images/mole.png" id="mole4" class="mole" />
-    <img src="../Assignments/images/mole.png" id="mole5" class="mole" />
-    <img src="../Assignments/images/mole.png" id="mole6" class="mole" />
-
-    <span class="points" id="point1">YOUR POINT :-</span>
-    <span id="currentPoint" class="points">0</span> -->
-
-<!--     <script src="script.js"></script>
-  </body> -->
-<!-- </html> -->
- -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -49,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WHAKE A MOLE GAME</title>
-    <link rel="stylesheet" href="./style14.css" />
+    <link rel="stylesheet" href="./styles14.css" />
   </head>
   <body>
     <h1>WHAKE A MOLE</h1>
@@ -92,6 +48,6 @@
     <span class="points" id="point1">YOUR POINT :-</span>
     <span id="currentPoint" class="points">0</span>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
