--- a/Assignments/Assignment14.html
+++ b/Assignments/Assignment14.html
@@ -17,10 +17,10 @@
     <!-- <h2 id="head2">Timer:- 60</h2> -->
     <h2 id="final">Your points</h2>
 
-    <!-- <audio id="myAudio">
+    <audio id="myAudio">
       <source src="./images/moletouch.wav" type="audio/mp3" id="audio1"/>
       <source src="./images/startgame.wav" type="audio/mp3" id="audio2"/>
-    </audio> -->
+    </audio>
     <img src="../Assignments/images/mole.png" id="mole" />
     <img src="../Assignments/images/dirt.svg" id="mud" />
     <button type="button" id="start" onclick="start()">START</button>
