--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         </tr>
         <tr>
             <td>14.WHAKE A MOLE GAME</td>
-            <td><a href="./Assignments/Assignment14.html">Game</a></td>
+            <td><a href="./Assignments/Assignment14.html">Whake a mole Game</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
@@ -289,16 +289,16 @@
         </tr>
         <tr>
             <td>21 Mario Game                </td>
-            <td><a href="./Assignments/Day-17 Mario_Game/firstPage.html">Canvas Game</a></td>
+            <td><a href="./Assignments/Day-17 Mario_Game/firstPage.html">Mario Game</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
         </tr>
-        <tr>
+        <!-- <tr>
             <td>22 Mario Game                </td>
             <td><a href="./Assignments/CanvasGame.html">Canvas Game</a></td>
             <td>Unchecked</td>
             <td><i class="fa fa-pencil"></i> <i class="fa fa-trash"></i></td>
-        </tr>
+        </tr> -->
     </table>
 </body>
 
