--- a/Assignments/Assingnemt11.html
+++ b/Assignments/Assingnemt11.html
@@ -77,7 +77,7 @@ document.body.style.fontFamily="cursive";
 document.body.style.fontSize="20px";
 document.body.style.textAlign="center";
 document.body.style.marginTop="150px";
-document.body.style.textShadow="10px 10px 10px white";
+// document.body.style.textShadow="10px 10px 10px white";
 
 document.write(`<h1> Assignment-3</h1>`)
 // remove extra white space from the string
