--- a/Assignments/AssignMent11.html
+++ b/Assignments/AssignMent11.html
@@ -74,8 +74,8 @@ document.write(fruits);
     // document.body.style.background="linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(182,182,221,1) 46%, rgba(148,187,233,1) 100%)"; 
     // document.body.style.backgroundColor="linear-gradient(to right,blue,skyblue)"
     // document.body.style.fontFamily="cursive";
-    // document.body.style.fontSize="20px";
-    // document.body.style.textAlign="center";
+    document.body.style.fontSize="20px";
+    document.body.style.textAlign="center";
     // document.body.style.marginTop="150px";
     // document.body.style.textShadow="10px 10px 10px white";
     
